Bug 509307 - Strange looking list showing under printer information
Summary: Strange looking list showing under printer information
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_printer_manager (other bugs)
Version First Reported In: 6.4.4
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-09 12:12 UTC by Yaroslav Sidlovsky
Modified: 2025-09-15 19:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.6
Sentry Crash Report:


Attachments
Screenshot of the issue (90.63 KB, image/png)
2025-09-09 12:12 UTC, Yaroslav Sidlovsky
Details
printers.conf (1.31 KB, text/plain)
2025-09-09 12:30 UTC, Yaroslav Sidlovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yaroslav Sidlovsky 2025-09-09 12:12:19 UTC
Created attachment 184845 [details]
Screenshot of the issue

SUMMARY
Added Canon printer today - it has some strange list with 1 symbol in each element in the settings dialog.
Message written in 1 column style is: "Canon Cartridge 070 Black Toner".
See attached screenshot.

STEPS TO REPRODUCE
1. Open "System Settings", navigate to "Printer";
2. Open printer settings.

OBSERVED RESULT
Strange looking list showing under printer information

EXPECTED RESULT
Some useful information should be shown in the list.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.16.3-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × 11th Gen Intel® Core™ i5-11600K @ 3.90GHz
Memory: 32 ГиБ of RAM (31.1 ГиБ usable)
Graphics Processor: Intel® Graphics
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B560M DS3H V2
Comment 1 Yaroslav Sidlovsky 2025-09-09 12:17:35 UTC
Additional information.
When starting `kcm_printer_manager` from the console and opening printer settings I see a lot of repeating errors:
```
...
qrc:/kcm/kcm_printer_manager/PrinterSettings.qml:466:25: Unable to assign [undefined] to double
qrc:/kcm/kcm_printer_manager/PrinterSettings.qml:466:25: Unable to assign [undefined] to double
qrc:/kcm/kcm_printer_manager/PrinterSettings.qml:466:25: Unable to assign [undefined] to double
```
Comment 2 Mike 2025-09-09 12:25:06 UTC
I think I know what this is.  Can you provide a copy of /etc/cups/printers.conf
Comment 3 Yaroslav Sidlovsky 2025-09-09 12:30:45 UTC
Created attachment 184846 [details]
printers.conf

Here you are.
Comment 4 Mike 2025-09-09 12:36:42 UTC
Thx, yes, it's what I thought.  Hope to have a fix soon.
Comment 5 Yaroslav Sidlovsky 2025-09-09 13:06:05 UTC
Thanks!
Comment 6 Bug Janitor Service 2025-09-09 14:15:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/print-manager/-/merge_requests/274
Comment 7 Mike 2025-09-15 19:14:26 UTC
Git commit ff874e33f6fb0514f9cbeef5e49323c13801d05b by Mike Noe.
Committed on 14/09/2025 at 22:52.
Pushed by noee into branch 'master'.

libkcups: Fix marker levels in printer model for a single marker

Levels needs to be a list of ints.  QVariant::toList converts an
int to a null list, so instead, create a list from the int entry
FIXED-IN: 6.4.6

M  +17   -5    src/libkcups/PrinterModel.cpp

https://invent.kde.org/plasma/print-manager/-/commit/ff874e33f6fb0514f9cbeef5e49323c13801d05b
Comment 8 Mike 2025-09-15 19:22:59 UTC
Git commit 9394e57f64a87c61f3567a530b93c20b5591bb7f by Mike Noe.
Committed on 15/09/2025 at 19:19.
Pushed by noee into branch 'Plasma/6.4'.

libkcups: Fix marker levels in printer model for a single marker

Levels needs to be a list of ints.  QVariant::toList converts an
int to a null list, so instead, create a list from the int entry
FIXED-IN: 6.4.6


(cherry picked from commit ff874e33f6fb0514f9cbeef5e49323c13801d05b)

Co-authored-by: Mike Noe <noeerover@gmail.com>

M  +17   -5    src/libkcups/PrinterModel.cpp

https://invent.kde.org/plasma/print-manager/-/commit/9394e57f64a87c61f3567a530b93c20b5591bb7f