libkcups: Fix marker levels in printer model for a single marker

Levels needs to be a list of ints.  QVariant::toList converts an
int to a null list, so instead, create a list from the int entry

BUG: 509307
FIXED-IN: 6.4.6